<resources>
    <string name="app_name">WorkIt</string>

    <string name="guest_login_landingpage">Guest</string>
    <string name="title_activity_main_page">MainPage</string>


    <string name="button_signup">Sign Up</string>
    <string name="button_signin">LOGIN</string>
    <string name="txt_forgot_password">"Forgot password?"</string>
    <string name="txt_or">or</string>
    <string name="button_guest">Guest Login</string>


    <string name ="dialog_text">How many repetition have you completed?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
